Enhanced StructureView 🚀